<?xml version="1.0"?>
<package>
  <name>youbot_controller</name>
  <version>0.0.0</version>
  <description>The YoubotController package</description>
  <maintainer email="mateusz.wagner@gmail.com">MW</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>youbot_driver</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>brics_actuator</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>youbot_driver</run_depend>
  <run_depend>brics_actuator</run_depend>

 <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
